@@ -1,4 +1,5 @@
 07/05/2015 - 1.4     - Fenix          - make use of Plugin.getSettings to retrieve configuration file values
+                                      - interface with spawnkill plugin
 06/30/2015 - 1.3.5   - Fenix          - fixed grudge_level retrieval from configuration file
 08/30/2014 - 1.3.4   - Fenix          - syntax cleanup
                                       - highly improved plugin configuration file loading
